# SE_Slayers

./: .gitignore  README.md  main.py  migration_docs.md  package-lock.json  package.json  pyproject.toml  run_instructions.txt  tailwind.config.js  vite.config.js
.github/: CODEOWNERS
backend/: .env  .gitignore  Final DB Schema in DBML.dbml  GMAIL_SETUP.md  celery_app.py  check_cust.py  config.py  credentials.json.template  debug_forecast.py  dummy.py  export_csvs.py  generate_fake_data.py  get_cid.py  migrate_db.py  requirements.txt  run.py  temp_output.txt  test_checkout.py  test_lazy.py  test_lookup.py  test_output.txt  test_query.py
backend/Seed_values/: Product.csv  SKU_table_2.csv  Vendor.csv  fake_order_data.csv  seed_fake_orders.py  seed_small_sample.py
backend/app/: __init__.py  auth.py  catalog_seeds.py  catalog_utils.py  seeds.py
backend/static/: SKU_table_2.csv  SKU_table_2_backup.csv  Vendor.csv  VendorProduct.csv  list_models.py
backend/tests/: conftest.py  test_ai_feature_api.py  test_auth_api.py  test_customer_email.py  test_customer_portal_api.py  test_demand_forecast.py  test_email_logic.py  test_internal_customers_api.py  test_internal_orders_api.py  test_internal_overview_api.py  test_inventory_api.py  test_vendors_api.py
frontend/: inventory.html  jsconfig.json  package-lock.json  package.json  vite.config.js
frontend/e2e/: vue.spec.js
frontend/src/: App.vue  main.js
src/: App.vue
src/components/: AppSidebar.vue  AppToast.vue  AppTopbar.vue
src/customer_dashboard/: index.css  main.ts
src/inventory_management/: inventory.vue
(+173 files in other folders)
