[project]
name = "se-slayers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery==5.5.0",
    "flask==3.1.0",
    "flask-cors==5.0.1",
    "flask-migrate==4.1.0",
    "flask-restx==1.3.0",
    "flask-sqlalchemy==3.1.1",
    "google-genai==1.54.0",
    "psycopg[binary]==3.3.3",
    "pyjwt==2.10.1",
    "pytest==9.0.2",
    "python-dotenv==1.1.0",
]
